# rosc

./: .gitignore  README.md  VERSION  annotated.html  annotated.js  classes.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000005.html  dir_000002_000006.html  dir_000002_000007.html  dir_000002_000008.html  dir_000002_000009.html  dir_000004_000002.html  dir_000004_000003.html  dir_000004_000008.html  dir_000004_000009.html  dir_000005_000002.html  dir_000005_000007.html  dir_000005_000008.html  dir_000005_000009.html  dir_000006_000002.html  dir_000006_000009.html  dir_000007_000003.html  dir_000007_000009.html  dir_000009_000002.html  dir_000009_000003.html  dir_000009_000004.html  dir_000011_000000.html  dir_000012_000000.html  dir_000013_000000.html  dir_000014_000000.html  dir_000015_000000.html  dir_000016_000000.html  dir_000017_000000.html  dir_000018_000000.html  dir_1553adfced3579895d973a01b3b8ba08.html  dir_1553adfced3579895d973a01b3b8ba08.js  dir_1553adfced3579895d973a01b3b8ba08_dep.map  dir_1553adfced3579895d973a01b3b8ba08_dep.md5  (+163 more)
ROSxmos_MessageGenerator/: .project  (+1 more)
a_test_pkg/: CMakeLists.txt  package.xml
a_test_pkg/msg/: abctest.msg  gnampf.msg  test12345.msg
genc/: CHANGELOG.rst  CMakeLists.txt  msg.h.template  package.xml  setup.py  srv.h.template
genc/cmake/: genc-extras.cmake  genc-extras.cmake.em  gencConfig.cmake
genc/genc/: generator.py
genc/lib/python2.7/genc/: test.py
genc/scripts/: CMakeLists.txt  gen_c.py  msg.h.template
genc/src/genc/: __init__.py
rosc_core/: CMakeLists.txt  ROScNode Library.doxyfile  os  package.xml  yaml
rosc_core/cmake/: rosc_core_src.cmake  rosc_core_src_list.cmake
rosc_core/code_gen/: refreshFiles.py  strHCgen.py  string_def.yaml
rosc_core/doc/: ROScNode Library.doxyfile
rosc_core/doc/additional_doc/: main.dox
rosc_core/doc/examples/: CMakeLists.txt  static_pubsub.c  static_subscriber.c
rosc_core/doc/style/: rosc.css
rosc_core/examples/: rpcmsg_generation.c
rosc_core/include/rosc/: rosc.h
rosc_core/include/rosc/com/: msg_gen.h  msg_gen_common.h  publish.h  ros_handler.h  ros_msg_buildup.h  ros_msg_common.h  ros_topic.h  xmlrpc.h  xmlrpc_server.h
rosc_core/include/rosc/com_ifaces/: iface.h  iface_setup.h
rosc_core/include/rosc/com_ros/generate/: rpc_request_msg.h
rosc_core/include/rosc/com_ros/parse/: ros_parser.h  tcpros_parser.h  xml_parser.h
rosc_core/include/rosc/com_xml/: rpc_request_msg.h
rosc_core/include/rosc/com_xml/parse/: parser.h  parser_structure.h
rosc_core/include/rosc/debug/: debug_out.h
rosc_core/include/rosc/msg_generators/: rpc_request_msg.h  xml_msg_gen.h
rosc_core/include/rosc/msg_parsers/: ros_parser.h  sebs_parser_frame.h  xml_parser.h  xml_parser_structure.h
rosc_core/include/rosc/msg_parsers/handler/: xmlrpc_server.h  xmlrpc_string_id.h  xmlrpc_types.h
rosc_core/include/rosc/msg_parsers/sub/: copy2buffer.h  numberparse.h  parseurl.h  seekstring.h  skipwholemessage.h  subs.h
rosc_core/include/rosc/msg_parsers/xml_mode/: parse_mode_header.h  parse_mode_xml.h
rosc_core/include/rosc/sebs_parse_fw/: sebs_parser_frame.h
rosc_core/include/rosc/sebs_parse_fw/adv_modules/: sebs_parse_http.h  sebs_parse_ros.h  sebs_parse_xml.h  sebs_ros.h
rosc_core/include/rosc/sebs_parse_fw/gen_modules/: buffer_fill.h  msg_gen_common.h  msg_gen_handler.h  size_deter.h
rosc_core/include/rosc/sebs_parse_fw/send_modules/: msggen.h  socket_connect.h
rosc_core/include/rosc/sebs_parse_fw/std_modules/: sebs_parse_copy2buffer.h  sebs_parse_numberparse.h  sebs_parse_parseurl.h  sebs_parse_seekstring.h  sebs_parse_skip.h  sebs_parse_skipwholemessage.h
rosc_core/include/rosc/string_res/: msg_strings.h
rosc_core/include/rosc/system/: abstraction.h  byte_handling.h  endian.h  eth.h  hosts.h  iface.h  mem.h  ports.h  rosc_init.h  rosc_spin.h  setup.h  status.h
rosc_core/src/rosc/com/: msg_gen.c  msg_gen_common.c  publish.c  ros_handler.c  ros_topic.c  xmlrpc.c  xmlrpc_server.c
rosc_core/src/rosc/com_iface/: iface.c
rosc_core/src/rosc/com_ros/generate/: xml_msg_gen.c
rosc_core/src/rosc/com_ros/parse/: tcpros_parser.c  xml_parser.c
rosc_core/src/rosc/com_xml/: msg_gen.c
rosc_core/src/rosc/com_xml/parse/: parser.c
rosc_core/src/rosc/msg_generators/: xml_msg_gen.c
rosc_core/src/rosc/msg_parsers/: ros_parser.c  sebs_parser_frame.c  xml_parser.c
rosc_core/src/rosc/msg_parsers/handler/: xmlrpc_client.c  xmlrpc_server.c
rosc_core/src/rosc/msg_parsers/sub/: copy2buffer.c  numberparse.c  parseurl.c  seekstring.c  skipwholemessage.c
rosc_core/src/rosc/msg_parsers/xml_mode/: parse_mode_header.c  parse_mode_xml.c
rosc_core/src/rosc/sebs_parse_fw/: sebs_parser_frame.c
rosc_core/src/rosc/sebs_parse_fw/adv_modules/: parse_ros_bin.c  sebs_parse_http.c  sebs_parse_ros.c  sebs_parse_xml.c  sebs_ros.c
rosc_core/src/rosc/string_res/: msg_strings.c
rosc_core/src/rosc/system/: endian.c  eth.c  iface.c  ports.c  rosc_init.c  rosc_spin.c  system.c
rosc_core/string_file_gen/: strHCgen.py  string_def.yaml
rosc_core/tests/: rosc_test_parse_bin.cpp
rosc_example_messages/: .cproject  .project  CMakeLists.txt  package.xml
rosc_example_messages/cmake/: example_src_list.cmake
rosc_example_messages/include/rosc/examplepack/: exmsg.h
rosc_example_messages/include/rosc/geometry_msgs/: Twist.h  Vector3.h
rosc_example_messages/include/rosc/std_msgs/: MultiArrayDimension.h  int8multiarray.h  multiarraydimension.h  multiarraylayout.h
rosc_example_messages/src/rosc/geometry_msgs/: Twist.c  Vector3.c
rosc_example_messages/src/rosc/std_msgs/: int8multiarray.c  multiarraydimension.c  multiarraylayout.c
rosc_linux_test/: CMakeLists.txt  package.xml
rosc_linux_test/msg/: rosc_sub.msg  rosc_test.msg  simple1.msg  simple2.msg  test_builtin.msg  testbuiltin.msg  testsubmessage.msg
rosc_linux_test/src/: main.c  o_main.c
rosc_sys_linux_x86/: .cproject  .project  CMakeLists.txt  package.xml
rosc_sys_linux_x86/include/: system_spec.h
rosc_sys_linux_x86/include/rosc/system/: spec.h  system_spec.h  types.h
rosc_sys_linux_x86/src/: system_linux.c
(+994 files in other folders)
