<?xml version="1.0"?>
<package>
  <name>a_test_pkg</name>
  <version>0.0.1</version>
  <description>The a_test_pkg package</description>

  <maintainer email="choll@todo.todo">choll</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
