<?xml version="1.0"?>
<package>
  <name>rosc_linux_test</name>
  <version>0.0.0</version>
  <description>The rosc_linux_test package</description>

  <maintainer email="choll@synapticon.com">Christian Holl</maintainer>
  <license>BSD</license>


  <author email="choll@synapticon.com">Christian Holl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>