<?xml version="1.0"?>
<package>
  <name>rosc_linux_test</name>
  <version>0.0.0</version>
  <description>The rosc_linux_test package</description>

  <maintainer email="choll@synapticon.com">Christian Holl</maintainer>
  <license>BSD</license>


  <author email="choll@synapticon.com">Christian Holl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosc_sys_linux_x86</build_depend>
</package>