<?xml version="1.0"?>
<package>
  <name>rosc_linux_test</name>
  <version>0.0.0</version>
  <description>The rosc_linux_test package</description>

  <maintainer email="choll@synapticon.com">Christian Holl</maintainer>
  <license>BSD</license>


  <author email="choll@synapticon.com">Christian Holl</author>

  <build_depend>rosc_sys_linux_x86</build_depend>
  <build_depend>a_test_pkg</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>