<?xml version="1.0"?>
<package>
  <name>rosc_sys_linux_x86</name>
  <version>0.0.0</version>
  <description>The rosc_sys_linux_x86 package</description>
  <maintainer email="choll@synapticon.com">Christian Holl</maintainer>
  <license>BSD</license>
   <url type="website">http://ros.org/wiki/rosc</url>
  <author email="choll@synapticon.com">Christian Holl</author> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>